[package]
name = "link_cmcc5g"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
url = "2.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }